--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,8 +4,12 @@ body {
 }
 
 .doc-style-editor {
+  margin: 10px;
+}
+
+.doc-wrapper {
   overflow: hidden;
-  margin: 10px auto;
+  margin: 0 auto;
   width: 100%;
 }
 
