--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -52,6 +52,7 @@ ul {
   border: 1px solid #000;
   .text-list {
     .text-item {
+      cursor: pointer;
       border: 1px solid #000;
     }
   }
